Archive/f65a8b7e2330253abae7aab3b75f0fb1-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp: In instantiation of 'void call(F&&) [with F = Foo]':
main.cpp:16:15:   required from here
main.cpp:11:23: error: passing 'Foo' as 'this' argument of 'void Foo::operator()() const &&' discards qualifiers [-fpermissive]
     (std::forward<F>(f))();
                       ^
